<resources>
    <!-- Main activity -->
    <string name="app_name">ShoppoMem</string>
    <string name="new_list_button">Create a new list</string>
    <string name="active_lists_button">Active lists</string>
    <string name="history_button">History</string>
    <string name="action_about">About</string>

    <!-- About dialog -->
    <string name="about_title">About</string>
    <string name="about_message"> ShoppoMem is made by Maja Filakovic\n\n
                                Version: 0.1\n
                                Copyright - All rights reserved.\n\n
                                For any questions feel free to contact\n
                                me on: maja.filakovic@gmail.com</string>
    <string name="about_dismiss_button">Dismiss</string>

    <!-- New list activity -->
    <string name="new_list_name">New list</string>
    <string name="action_save">Save</string>
    <string name="message_action_save">List saved!</string>
    <string name="add_new_item">Add new item...</string>

    <!-- Add new item dialog -->
    <string name="new_item_dialog">Add new item</string>
    <string name="new_item_name">Name:</string>
    <string name="new_item_quantity">Pieces:</string>
    <string name="new_item_tip">Info:</string>
    <string name="new_item_name_hint">Enter grocery name</string>
    <string name="new_item_quantity_hint">Enter quantity</string>
    <string name="new_item_tip_hint">Additional info</string>
    <string name="new_item_add">Add</string>
    <string name="new_item_discard">Discard</string>

    <!-- Save new list dialog -->
    <string name="save_new_list_message">Save the list and finish editing?</string>
    <string name="save_new_list_save_button">Save</string>
    <string name="save_new_list_dismiss_button">Dismiss</string>

    <!-- Go back from new list without saving dialog -->
    <string name="go_back_new_list_title">Go back without saving?</string>
    <string name="go_back_new_list_message">Warning: All data will be lost!</string>
    <string name="go_back_new_list_no">No</string>
    <string name="go_back_new_list_yes">Yes</string>

    <!-- Delete item from the list dialog -->
    <string name="delete_item_message">Are you sure you want to remove the item
                                       from the list?</string>
    <string name="delete_item_yes">I\'m sure</string>
    <string name="delete_item_no">Actually no</string>

    <!-- Active lists activity -->
    <string name="active_lists_name">Active lists</string>

    <!-- History activity -->
    <string name="history_name">History</string>

    <!-- Pending list activity -->
    <string name="pending_list_name">Shopping time!</string>
    <string name="finish_shopping">Shopping done</string>

    <!-- Finish shopping dialog -->
    <string name="finish_shopping_title">Finish shopping?</string>
    <string name="finish_shopping_message">The final list will be available in history.</string>
    <string name="finish_shopping_finish">Finish</string>
    <string name="finish_shopping_continue">Continue shopping</string>

    <!-- Saving empty list dialog -->

    <string name="save_empty_list_message">List is empty!</string>
    <string name="same_empty_list_ok">OK</string>

</resources>
