<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_vertical_margin"
    android:layout_gravity="center"
    tools:context="com.firefly.shoppomem.AddNewItemDialogFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_item_dialog"
        android:textSize="@dimen/new_item_dialogue_name"
        android:textColor="@color/colorDialogTitle"
        android:paddingBottom="20dp"
        android:paddingTop="24dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="2"
        android:rowCount="3">

        <TextView
            android:layout_column="0"
            android:layout_row="0"
            android:paddingRight="20dp"
            android:textColor="@color/colorDialogTextView"
            android:textSize="@dimen/new_item_dialogue_text_view"
            android:text="@string/new_item_name" />

        <TextView
            android:layout_column="0"
            android:layout_row="1"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textColor="@color/colorDialogTextView"
            android:textSize="@dimen/new_item_dialogue_text_view"
            android:text="@string/new_item_quantity" />

        <TextView
            android:layout_column="0"
            android:layout_row="2"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textColor="@color/colorDialogTextView"
            android:textSize="@dimen/new_item_dialogue_text_view"
            android:text="@string/new_item_tip" />

        <EditText
            android:id="@+id/newItemNameEdit"
            android:layout_column="1"
            android:layout_row="0"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:hint="@string/new_item_name_hint" />

        <EditText
            android:id="@+id/newItemQuantityEdit"
            android:layout_column="1"
            android:layout_row="1"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:hint="@string/new_item_quantity_hint" />

        <EditText
            android:id="@+id/newItemNameInfo"
            android:layout_column="1"
            android:layout_row="2"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:hint="@string/new_item_tip_hint" />

    </GridLayout>

</LinearLayout>


